local change of title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Welcome to our site you'll be glad you joined!</a></div>
+				<div class="logo"><a href="#">Welcome to our amazing site you'll be glad you joined! Tell a friend!!</a></div>
 			</header>
 
 		<!-- Main -->
